Split sources of common and fabric subprojects